name:                pure-bench
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-bench
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-test >= 0.7 && < 1,
    pure-spacetime >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    pure-variance >= 0.7 && < 1,
    deepseq
   
  exposed-modules:
    Pure.Bench

  if (impl(ghcjs))
    exposed-modules: 
      Pure.Bench.GHCJS
  else
    exposed-modules:
      Pure.Bench.GHC

  hs-source-dirs: src

  default-language: Haskell2010