name:                pure-bench
version:             0.8.0.0
homepage:            purehs.org/doc/pure-bench
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-bench.git

library
  build-depends:
    base,
    pure-test,
    pure-spacetime,
    pure-lifted,
    pure-json,
    pure-variance,
    deepseq
   
  exposed-modules:
    Pure.Bench

  if (impl(ghcjs))
    exposed-modules: 
      Pure.Bench.GHCJS
  else
    exposed-modules:
      Pure.Bench.GHC

  hs-source-dirs: src

  default-language: Haskell2010
